syntax = "proto3";

package com.strandhvilliam.grpc;

option java_package = "com.strandhvilliam.ordermanagement.grpc";
option java_outer_classname = "OrderProto";
option java_multiple_files = true;

service OrderManagementService {
  rpc createOrder(CreateOrderRequest) returns (OrderResponse) {}
}

message CreateOrderRequest {
  string userId = 1;
  repeated string productIds = 2;
}

message OrderResponse {
  string id = 1;
  string date = 2;
  string userId = 3;
  string status = 4;
  repeated OrderItem items = 5;
}

message OrderItem {
  string id = 1;
  string productId = 2;
  string description = 3;
  double cost = 4;
}
